# pacgraph

./: pyproject.toml
pacgraph/: graph.py  main.py  models.py  pacman.py
tests/: test_pacgraph.py
