[tool.poetry]
name = "pacgraph"
version = "0.1.0"
description = ""
authors = ["polydome <polydome@tutanota.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pyvis = "^0.1.9"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
